# tronomic

./: .gitmodules  Cargo.toml  README.md
libs/: patch.diff  patch_egui_node_graph.diff
src/: app.rs  app_graph.rs  app_graph_old.rs  color.rs  error.rs  gfx.rs  main.rs
src/dmx/: channel.rs  dmx.rs  fixtures.rs  mod.rs  universe.rs
src/graph/: graph.rs  mod.rs  node.rs  port.rs
src/integrations/: artnet.rs  mod.rs
src/threads/: evaluation.rs  mod.rs  output.rs
