[package]
name = "tronomic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "^0.26"
wgpu = "^0.12"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
#serde_cbor = "^0.10"

parking_lot = "^0.12"
slotmap = "^1"
tokio = { version = "^1", features = ["full"] }
log = { version = "^0.4" }
env_logger = { version = "^0.9" }

artnet_protocol = "^0.4"

epi = "^0.17"
egui = { version = "^0.17", features = ["persistence", "multi_threaded"]}
egui_wgpu_backend = "^0.17"
egui_winit_platform = "^0.14"
#egui_demo_lib = "^0.17"
#egui_node_graph = "0.2"
egui_node_graph = { path = "libs/egui_node_graph/egui_node_graph", features = ["persistence"] }
